RESOLVED FIXED209218
REGRESSION (r257214): Targeted preview animates to the wrong place when dropping in editable content
https://bugs.webkit.org/show_bug.cgi?id=209218
Summary REGRESSION (r257214): Targeted preview animates to the wrong place when dropp...
Wenson Hsieh
Reported 2020-03-17 20:36:59 PDT
Attachments
Patch (11.76 KB, patch)
2020-03-18 10:00 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-03-18 10:00:01 PDT
EWS
Comment 2 2020-03-18 12:31:27 PDT
Committed r258659: <https://trac.webkit.org/changeset/258659> All reviewed patches have been landed. Closing bug and clearing flags on attachment 393872 [details].
Note You need to log in before you can comment on or make changes to this bug.