Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -6814,40 +6814,48 @@ static BOOL allPasteboardItemOriginsMatchOrigin(UIPasteboard *pasteboard, const 
     return WebCore::IOSApplication::isDataActivation();
 }
 
+- (RetainPtr<UIView>)_createPreviewContainerWithLayerName:(NSString *)layerName
+{
+    auto container = adoptNS([[UIView alloc] init]);
+    [container layer].anchorPoint = CGPointZero;
+    [container layer].name = layerName;
+    [_interactionViewsContainerView addSubview:container.get()];
+    return container;
+}
+
+- (UIView *)containerForDropPreviews
+{
+    if (!_dropPreviewContainerView)
+        _dropPreviewContainerView = [self _createPreviewContainerWithLayerName:@"Drop Preview Container"];
+
+    ASSERT([_dropPreviewContainerView superview]);
+    [_dropPreviewContainerView setHidden:NO];
+    return _dropPreviewContainerView.get();
+}
+
 - (UIView *)containerForDragPreviews
 {
-    if (_dragPreviewContainerView) {
-        ASSERT([_dragPreviewContainerView superview]);
-        [_dragPreviewContainerView setHidden:NO];
-        return _dragPreviewContainerView.get();
-    }
+    if (!_dragPreviewContainerView)
+        _dragPreviewContainerView = [self _createPreviewContainerWithLayerName:@"Drag Preview Container"];
 
-    _dragPreviewContainerView = adoptNS([[UIView alloc] init]);
-    [_dragPreviewContainerView layer].anchorPoint = CGPointZero;
-    [_dragPreviewContainerView layer].name = @"Drag Preview Container";
-    [_interactionViewsContainerView addSubview:_dragPreviewContainerView.get()];
-
+    ASSERT([_dragPreviewContainerView superview]);
+    [_dragPreviewContainerView setHidden:NO];
     return _dragPreviewContainerView.get();
 }
 
 - (UIView *)containerForContextMenuHintPreviews
 {
-    if (_contextMenuHintContainerView) {
-        ASSERT([_contextMenuHintContainerView superview]);
-        [_contextMenuHintContainerView setHidden:NO];
-        return _contextMenuHintContainerView.get();
-    }
+    if (!_contextMenuHintContainerView)
+        _contextMenuHintContainerView = [self _createPreviewContainerWithLayerName:@"Context Menu Hint Preview Container"];
 
-    _contextMenuHintContainerView = adoptNS([[UIView alloc] init]);
-    [_contextMenuHintContainerView layer].anchorPoint = CGPointZero;
-    [_contextMenuHintContainerView layer].name = @"Context Menu Hint Container";
-    [_interactionViewsContainerView addSubview:_contextMenuHintContainerView.get()];
-
+    ASSERT([_contextMenuHintContainerView superview]);
+    [_contextMenuHintContainerView setHidden:NO];
     return _contextMenuHintContainerView.get();
 }
 
 - (void)_hideTargetedPreviewContainerViews
 {
+    [_dropPreviewContainerView setHidden:YES];
     [_dragPreviewContainerView setHidden:YES];
     [_contextMenuHintContainerView setHidden:YES];
 }
@@ -7144,7 +7152,7 @@ static NSArray<NSItemProvider *> *extractItemProvidersFromDropSession(id <UIDrop
     [_unselectedContentSnapshot setFrame:data->contentImageWithoutSelectionRectInRootViewCoordinates];
 
     [self insertSubview:_unselectedContentSnapshot.get() belowSubview:_visibleContentViewSnapshot.get()];
-    _dragDropInteractionState.deliverDelayedDropPreview(self, self.containerForDragPreviews, data.value());
+    _dragDropInteractionState.deliverDelayedDropPreview(self, self.containerForDropPreviews, data.value());
 }
 
 - (void)_didPerformDragOperation:(BOOL)handled
@@ -7833,6 +7841,7 @@ static Vector<WebCore::IntSize> sizesOfPlaceholderElementsToInsertWhenDroppingIt
 
 - (void)dropInteraction:(UIDropInteraction *)interaction concludeDrop:(id <UIDropSession>)session
 {
+    [std::exchange(_dropPreviewContainerView, nil) removeFromSuperview];
     [std::exchange(_visibleContentViewSnapshot, nil) removeFromSuperview];
     [std::exchange(_unselectedContentSnapshot, nil) removeFromSuperview];
     _dragDropInteractionState.clearAllDelayedItemPreviewProviders();
